--- a/tomcat_install.yaml
+++ b/tomcat_install.yaml
@@ -23,5 +23,11 @@
                    dest: /app/devops/tools
                    remote_src: yes
 
+          -name : Install jenkins on linux
+            get_url:
+                    url: https://mirrors.estointernet.in/apache/tomcat/tomcat-8/v8.5.68/bin/apache-tomcat-8.5.68.tar.gz
+                    dest: /app/devops/tools
+                    mode: 0750       
+
           - name: start tomcat services
             shell: nohup /app/devops/tools/apache-tomcat-8.5.68/bin/startup.sh
